--- a/src/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
+++ b/src/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>ProgrammingWithPalermo.ChurchBuletin.$(MSBuildProjectName)</AssemblyName>
-    <RootNamespace>ProgrammingWithPalermo.ChurchBuletin.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
 </Project>
