--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>ProgrammingWithPalermo.ChurchBuletin.$(MSBuildProjectName)</AssemblyName>
-    <RootNamespace>ProgrammingWithPalermo.ChurchBuletin.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <AssemblyName>ProgrammingWithPalermo.ChurchBulletin.$(MSBuildProjectName)</AssemblyName>
+    <RootNamespace>ProgrammingWithPalermo.ChurchBulletin.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
 </Project>
